[package]
name = "adventofcode_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

[[bin]]
name = "day01_1"
path = "src/day01/main_1.rs"

[[bin]]
name = "day01_2"
path = "src/day01/main_2.rs"

[[bin]]
name = "day02_1"
path = "src/day02/main_1.rs"

[[bin]]
name = "day02_2"
path = "src/day02/main_2.rs"

[[bin]]
name = "day03_1"
path = "src/day03/main_1.rs"

[[bin]]
name = "day03_2"
path = "src/day03/main_2.rs"
